# innoforge

./: .env.example  .eslintrc.json  .gitignore  .postman.json  AGENTS.md  API_TEST_REPORT.md  API_TEST_REPORT_TIMESTAMP.md  API_TEST_RESULTS.md  API_TEST_SUMMARY.md  CHANGELOG.md  CI_FIX_GUIDE.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DOCS_INDEX.md  DOCUMENTATION_SYSTEM.md  Dockerfile  FINAL_STATUS.md  FUTURE_PROJECTS.md  GITHUB_SETUP.md  PROJECT_CONTEXT.md  PROJECT_SUMMARY.md  PROXY_FIX_GUIDE.md  PUSH_STATUS.md  PUSH_VERIFICATION.md  README.md  RELEASE_v0.1.0.md  SECURITY_FIXES.md  SETTINGS_API_SUMMARY.md  SORT_FEATURE_COMPLETE.md  SORT_FEATURE_TEST_REPORT.md  STATUS.md  SYNC_STATUS.md  TIMESTAMP_FIX_REQUIRED.md  VERIFICATION_REPORT.md  create_release.ps1  create_release_api.ps1  create_release_api.sh  (+29 more)
.kiro/: agent.md
docs/: API.md  ARCHITECTURE.md  deepscientist-insights.md  depth-quality-gate.md  errors.md  handover-briefing.md  handover-gpt5.6.md  ios-build.md  oa-import-flow-status.md  prepush-review-v0.5.7-2026-04-24.md  release-gate-manual-e2e.md  release-package-qa-v0.5.6-2026-04-24.md  release_verify.ps1  v0.5.7-fix-notes-2026-04-24.md  国内用户指南.md
harmonyos/: .gitignore  build.sh  oh-package.json5
innoforge-skill/: SKILL.md  SUMMARY.md
mobile/: Cargo.toml  Dioxus.toml
mobile/assets/: style.css
mobile/src/: api.rs  main.rs
patent-hub-skill/: SKILL.md
release-package/: README.md  start.bat  启动说明.txt
scripts/: install-scheduler.ps1  self-review.ps1
src/: ai.rs  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+160 files in other folders)
