[package]
name = "patent-hub-mobile"
version = "0.3.1"
edition = "2021"
description = "Patent Hub Mobile - Intelligent Patent Search & Analysis"

[dependencies]
dioxus = { version = "0.7", features = ["mobile", "router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[package.metadata.dioxus]
default_platform = "mobile"

[[bin]]
name = "patent-hub-mobile"
path = "src/main.rs"
